# find-pr

./: AGENTS.md  Cargo.toml  README.md
docs/: architecture.md
src/: app.rs  cli.rs  main.rs  model.rs  presentation.rs
src/services/: clipboard.rs  git.rs  mod.rs  scoring.rs
tests/: cli.rs
