[package]
name = "find-pr-semantic-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "=0.4.31", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
fuzzy-matcher = "0.3"
itertools = "0.12"
once_cell = "1"
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
